Fixed overlapping text.

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -76,6 +76,8 @@ input[type="number"]::-webkit-outer-spin-button {
   font-size: 1.5em;
   letter-spacing: 0.2em;
   color: white;
+  word-wrap: break-word;
+  max-width: 80%;
 }
 
 // Footer
